--- a/style.css
+++ b/style.css
@@ -267,3 +267,13 @@ h3.w3f_title {
     transition: all 0.3s ease-in-out;
     background-color: rgb(190, 190, 190);
 }
+
+.servicecard{
+  display: flex; 
+  flex-direction: column;
+  align-items: center;
+}
+
+.servicecard img{
+  margin-bottom: 20px;
+}
