--- a/css/style1.css
+++ b/css/style1.css
@@ -16,10 +16,12 @@ body {
 }
 
 body {
-  background: linear-gradient(135deg, #e9ff00, #ff3434);
+  background-image: url(../chatbotbg.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   background-size: cover;
   font-family: 'Open Sans', sans-serif;
-  font-size: 12px;
   line-height: 1.3;
   overflow: hidden;
 }
@@ -42,17 +44,17 @@ Chat
 --------------------*/
 .chat {
   position: absolute;
-  top: 50%;
+  top: 52%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   width: 80%;
-  height: 100vh;
+  height: 80vh;
   max-height: 700px;
   z-index: 2;
   overflow: hidden;
   box-shadow: 0 5px 30px rgba(0, 0, 0, 0.2);
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.8);
   border-radius: 20px;
   display: flex;
   justify-content: space-between;
@@ -74,7 +76,7 @@ Chat Title
 }
 .chat-title h1, .chat-title h2 {
   font-weight: normal;
-  font-size: 10px;
+  font-size: 12px;
   margin: 0;
   padding: 0;
 }
