--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body{
       font-weight: 600;
   }
   .intro{
-      padding: 6em 0px;
+      padding: 6em 0px 2em 0px;
   }
   .topper{
       background-image: url(./topper.png);
