--- a/We Care/app/src/main/res/layout/activity_heart_rate_process.xml
+++ b/We Care/app/src/main/res/layout/activity_heart_rate_process.xml
@@ -11,7 +11,7 @@
     android:paddingRight="64dp"
     android:paddingBottom="16dp"
     android:weightSum="1"
-    tools:context="com.example.yo7a.healthwatcher.HeartRateProcess">
+    tools:context="com.example.weCare.application.HeartRateProcess">
 
 
     <SurfaceView
