--- a/We Care/app/src/main/res/layout/activity_login.xml
+++ b/We Care/app/src/main/res/layout/activity_login.xml
@@ -18,7 +18,7 @@
         android:paddingRight="16dp"
         android:paddingBottom="16dp"
         android:weightSum="1"
-        tools:context="com.example.yo7a.healthwatcher.Login">
+        tools:context="com.example.weCare.application.Login">
 
 
         <TextView
