--- a/We Care/app/src/main/res/layout/activity_respiration_result.xml
+++ b/We Care/app/src/main/res/layout/activity_respiration_result.xml
@@ -13,7 +13,7 @@
     android:paddingRight="64dp"
     android:paddingBottom="16dp"
     android:weightSum="1"
-    tools:context="com.example.yo7a.healthwatcher.RespirationResult">
+    tools:context="com.example.weCare.application.RespirationResult">
 
     <ImageView
         android:id="@+id/imageView6"
