--- a/We Care/app/src/main/res/layout/activity_dashboard.xml
+++ b/We Care/app/src/main/res/layout/activity_dashboard.xml
@@ -44,7 +44,7 @@
             android:background="#17365d"
             android:text="Add Contact"
             android:textAllCaps="false"
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <Button
@@ -56,10 +56,20 @@
             android:background="#17365d"
             android:text="Send SMS to All"
             android:textAllCaps="false"
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:gravity="center_horizontal"
+        android:text="(Tap on the contact(s) to send a SOS message)"
+        android:textColor="@color/colorPrimaryDark" />
 
     <ListView
         android:id="@+id/lvSOSContacts"
@@ -82,7 +92,7 @@
         android:fontFamily="sans-serif-medium"
         android:text="See Vital Signs"
         android:textAllCaps="false"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:textStyle="bold" />
 
     <LinearLayout
@@ -168,9 +178,9 @@
         android:layout_marginBottom="10dp"
         android:layout_weight="0.45"
         android:background="#17365d"
-        android:text="Visit Website"
+        android:text="Symptom Checker"
         android:textAllCaps="false"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:textStyle="bold" />
 
 </LinearLayout>
