--- a/We Care/app/src/main/res/layout/activity_respiration_process.xml
+++ b/We Care/app/src/main/res/layout/activity_respiration_process.xml
@@ -11,7 +11,7 @@
     android:paddingRight="64dp"
     android:paddingBottom="16dp"
     android:weightSum="1"
-    tools:context="com.example.yo7a.healthwatcher.RespirationProcess">
+    tools:context="com.example.weCare.application.RespirationProcess">
 
     <SurfaceView
         android:id="@+id/preview"
