--- a/We Care/app/src/main/res/layout/activity_start_vital_signs.xml
+++ b/We Care/app/src/main/res/layout/activity_start_vital_signs.xml
@@ -11,7 +11,7 @@
     android:paddingTop="16dp"
     android:paddingRight="64dp"
     android:paddingBottom="16dp"
-    tools:context="com.example.yo7a.healthwatcher.StartVitalSigns">
+    tools:context="com.example.weCare.application.StartVitalSigns">
 
     <ImageView
         android:id="@+id/imageView3"
