--- a/We Care/app/src/main/res/layout/activity_vital_signs_process.xml
+++ b/We Care/app/src/main/res/layout/activity_vital_signs_process.xml
@@ -10,7 +10,7 @@
     android:paddingRight="64dp"
     android:paddingBottom="16dp"
     android:weightSum="1"
-    tools:context="com.example.yo7a.healthwatcher.VitalSignsProcess">
+    tools:context="com.example.weCare.application.VitalSignsProcess">
 
 
     <SurfaceView
